tdf#125288 Databar dialog's entry color was changed to RYB Blue

Change-Id: I9ac6df07078d60bf439babc46384fa96267fb4cd